# sumit-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
samples/: analyze_api.py  local_file_transcript_curl.sh  microphone_array_transcript.py  realtime_transcript.py  realtime_transcript_flask.py  realtime_transcript_from_file.py  realtime_transcript_gui.py  storage_test.py  storeg_test.py  stream_stt.py  streamlink_transcript.py  summary_api.py  transcript_from_storage.py  translate_api.py  translate_subtitles.py  usage_report_example.py
samples/depracated/: realtime_transcript_flask.py  realtime_transcript_gui.py  stream_local_file_loopback.sh  streamlink_transcript.py
samples/depracated/webui/: index.html  index_old.html  transcript.html
sumit_sdk/: analyze_api.py  api.py  api_helper.py  base_task.py  realtime_stt.py  storage.py  stream_stt.py  strean_stt.py  sumit_reckit.py  summary_api.py  transcript.py  translate_api.py  translate_subtitles.py  users.py
sumit_sdk/utils/: alsa_recorder.py  audio_helper.py  downsample_helper.py  socketio_client.py  streamlink_helper.py
test_docker/: Dockerfile  Dockerfile.dockerignore  build.sh  onprem_stt.py  run.sh
